projects/compiler/test/typechecker/typedecl/error_duplicate_type_enum.abra
type Foo { a: Int }
enum Foo { Bar }